[package]
name = "dc-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }


[dependencies.poise]
poise = "0.5.7"

[dependencies.serenity]
default-features = false
features = [
  "client",
  "framework",
  "gateway",
  "rustls_backend"
]
version = "0.12"
